# pydlennon

./: .gitignore  INSTALL.md  LICENSE  README.md  requirements.txt  setup.cfg
pydlennon/contexts/: seeded_rng.py
pydlennon/extensions/pandas/: __init__.py  ext_categorical.py  instr_categorical.py
pydlennon/patterns/: borg.py  instrumented.py  proxy.py
pydlennon/tests/extensions/: test_ext_categorical.py
pydlennon/tests/patterns/: test_instrumented.py  test_proxy.py
src/extensions/matplotlib/: __init__.py  abline.py
src/extensions/pandas/: __init__.py  ext_categorical.py  xcat.py
src/extensions/patsy/: patsy.py
src/patterns/: proxy.py
tests/: __init__.py
tests/extensions/: test_ext_categorical.py
tests/patterns/: test_proxy.py
util/: delegate.py
