[metadata]
# replace with your username:
name = pydlennon
version = 0.0.1.dev1
author = Dustin Lennon
author_email = dustin.lennon@gmail.com
description = A repo for often used code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dustinlennon/pydlennon
project_urls =
    Bug Tracker = https://github.com/dustinlennon/pydlennon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license = BSD-3-Clause-Clear License 

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
	matplotlib
	numpy
	pandas
	patsy


